[tool.poetry]
name = "tasket"
version = "0.1.0"
description = "A web application to automate simple leasing office tasks"
authors = ["reidspreiter <reidspreiter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13"
flask = "3.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "0.8.0"
mypy = "1.13.0"
pre-commit = "4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
